# Cogs189_project

./: .gitignore  README.md  main.py  plot_eeg.py  pyproject.toml  requirements.txt  run_rsvp.py  train_attention_classifier.py
tests/: test_train_attention_classifier.py
