[project]
name = "cogs189-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brainflow>=5.1.2",
    "matplotlib>=3.6.0",
    "mne>=1.0.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "psychopy>=2022.1.4",
    "pyserial>=3.5",
    "scikit-learn>=1.2.0",
    "scipy>=1.9.0",
]
